# llmmic

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.cmd  run.ps1  run.sh  setup.cmd  setup.ps1  setup.sh
app/: __init__.py  audio.py  chunker.py  config.py  health.py  llm.py  main.py  session.py  stt.py  text_sanitize.py  tts.py  vad.py
docker/melotts_service/: Dockerfile  service.py
scripts/: check_llm_stream.py  simulate_ws_session.py  smoke_tts_ko.py
static/: index.html  main.js  pcm-worklet.js  styles.css
tests/: test_chunker.py  test_llm.py  test_session.py  test_text_sanitize.py
