[project]
name = "llmmic"
version = "0.1.0"
description = "Local browser voice conversation app for an OpenAI-compatible LLM."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn[standard]>=0.46,<0.47",
  "httpx>=0.28,<0.29",
  "numpy>=1.26",
  "soundfile>=0.13",
  "faster-whisper>=1.2,<1.3",
  "silero-vad>=6.2,<6.3",
]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
